<resources>
    <string name="app_name">LFC</string>
    <string name="title">LFC - Edition #1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_edition">Édition</string>
    <string name="menu_liquidity">Trésorerie</string>

    <string name="save">Enregistrer</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>

    <!--EDITION ACTIVITY-->
    <string name="add_a_service">Ajouter un service</string>
    <string name="add_a_showcase">Ajouter un showcase</string>
    <string name="update_prestation">Modifier une prestation</string>
    <string name="remove_prestation">Supprimer la prestation</string>
    <string name="handle_edition_service">Gérer le staff</string>
    <string name="amount">Montant</string>
    <string name="name">Nom</string>
    <string name="default_amount">0</string>
    <string name="fetching_editions">Récupération des éditions</string>
    <string name="add_edition">Ajouter une édition</string>
    <string name="example_elv_item_tv1">Léa</string>
    <string name="example_elv_item_tv2">Vidéo</string>
    <string name="artist">Artiste</string>
    <string name="duration">Durée</string>
    <string name="default_duration">30mn</string>
    <string name="default_time">20h00</string>
    <string name="default_date">24/02/2022</string>
    <string name="details">Details</string>
    <string name="default_location">Le Fiacre</string>
    <string name="default_edition">Édition #9</string>
    <string name="default_artist">Artiste</string>
    <string name="location">Emplacement</string>
    <string name="advertisement">Publicité</string>
    <string name="date">Date</string>
    <string name="edition">Edition</string>
    <string name="fetching_edition">Récupération de l\'édition</string>
    <string name="edit_edition_facture">Éditer la facture</string>
    <string name="save_edition_program">Enregistrer le programme</string>
    <string name="delete_edition">Supprimer l\'édition</string>

    <!--LIQUIDITY FRAGMENT-->
    <string name="bank_account">Banque</string>
    <string name="billets500">Billets 500</string>
    <string name="billets200">Billets 200</string>
    <string name="billets100">Billets 100</string>
    <string name="billets50">Billets 50</string>
    <string name="billets20">Billets 20</string>
    <string name="billets10">Billets 10</string>
    <string name="billets5">Billets 5</string>
    <string name="coins2">Pièces 2</string>
    <string name="coins1">Pièces 1</string>
    <string name="coins05">Pièces 0.50</string>
    <string name="coins02">Pièces 0.20</string>
    <string name="coins01">Pièces 0.10</string>
    <string name="title_activity_edition2">ActivityEdition2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>