<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_gallery">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.gaminho.lfc.activity.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.gaminho.lfc.activity.ui.gallery.EditionFragment"
        android:label="@string/menu_edition"
        tools:layout="@layout/fragment_edition" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gaminho.lfc.activity.ui.liquidity.LiquidityFragment"
        android:label="@string/menu_liquidity"
        tools:layout="@layout/fragment_liquidity"/>
</navigation>