<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_edition_home">

    <fragment
        android:id="@+id/navigation_edition_home"
        android:name="com.gaminho.lfc.activity.edition.ui.EditionHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/navigation_edition_dashboard"
        android:name="com.gaminho.lfc.activity.edition.ui.EditionDashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_edition_dashboard"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.gaminho.lfc.activity.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications"/>

</navigation>