<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="?android:attr/expandableListPreferredItemPaddingLeft"
    android:weightSum="3">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/example_elv_item_tv1"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:text="@string/example_elv_item_tv2"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:paddingVertical="10dp"
        android:layout_weight="1"
        android:text="@string/default_amount"
        android:textAlignment="textEnd"/>

</LinearLayout>