<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_marginVertical="0dp"
    android:layout_marginHorizontal="8dp">

    <RelativeLayout
        android:id="@+id/cell_edition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="5dp"
        android:paddingHorizontal="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cell_edition_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/purple_500"
                android:text="@string/default_edition"/>

            <TextView
                android:id="@+id/cell_edition_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/purple_200"
                android:text="@string/default_location"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cell_edition_detail_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/teal_700"
                android:text="@string/default_date"/>

            <TextView
                android:id="@+id/cell_edition_detail_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"/>

        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>